@@ -42,15 +42,6 @@
 struct _kbd_bck_info kbd_bck_info;
 
 
-int
-has_kbd_backlight(void)
-{
-  return ((mops->type == MACHINE_MACBOOKPRO_1)
-	  || (mops->type == MACHINE_MACBOOKPRO_2)
-	  || (mops->type == MACHINE_MACBOOKPRO_3));
-}
-
-
 static int
 kbd_backlight_get(void)
 {
